--- a/test3.html
+++ b/test3.html
@@ -36,7 +36,7 @@ body {
 <body>
 
 <div class="topnav">
-  <a class="active" href="#home" img src="airl1ght.png">></a>
+  <a class="active" href="#home"> <img src="airl1ght.png"> </a>
   <a href="#news">News</a>
   <a href="#contact">Contact</a>
   <a href="#about">About</a>
