--- a/test3.html
+++ b/test3.html
@@ -3,6 +3,17 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+
+  @media (max-width: 500px){
+  .active {
+    display: block;
+    width:111;
+    height:44;
+    margin: auto;
+    
+  }
+  
+  
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
@@ -30,11 +41,13 @@ body {
 .topnav a.active {
   background-color: #04AA6D;
   color: white;
+  
 }
 </style>
 </head>
 <body>
 
+  
 <div class="topnav">
   <a class="active" href="#home"> <img src="airl1ght.png"> </a>
   <a href="#news">News</a>
