--- a/S-main.html
+++ b/S-main.html
@@ -6,7 +6,7 @@
 
 <h1> This is a blank HTML page </h1>
   
-<audio src="Portal2-16-Some_Assembly_Required.mp3"></audio>
+<audio controls src="Portal2-16-Some_Assembly_Required.mp3"></audio>
 
 </body>
 
