--- a/Schoolwork/photoshop-tutorials.html
+++ b/Schoolwork/photoshop-tutorials.html
@@ -4,11 +4,7 @@
 
 <body>
 
-<h1> This is a blank HTML page </h1>
-  
-<audio controls src="Portal2-16-Some_Assembly_Required.mp3"></audio>
-
-<a href="https://www.airbourne.xyz/Schoolwork/s-index.html">photoshop-tutorials</a>
+<h1> To Edit. </h1>
 
 </body>
 
