--- a/Schoolwork/s-index.html
+++ b/Schoolwork/s-index.html
@@ -4,11 +4,10 @@
 
 <body>
 
-<h1> This is a blank HTML page </h1>
+<h1>SchoolWork Index</h1>
   
-<audio controls src="Portal2-16-Some_Assembly_Required.mp3"></audio>
 
-<a href="https://www.airbourne.xyz/Schoolwork/s-index.html">photoshop-tutorials</a>
+<a href="https://www.airbourne.xyz/Schoolwork/photoshop Tutorials.html">photoshop-tutorials</a>
 
 </body>
 
