--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
 <audio controls src="Portal2-16-Some_Assembly_Required.mp3"></audio>
 
-<a href="https://www.airbourne.xyz/Schoolwork/s-index.html">photoshop-tutorials</a>
+<a href="https://www.airbourne.xyz/Schoolwork/s-index.html">SchoolWork</a>
 
 </body>
 
