updated sorting & tried separating the music and the links

--- a/Schoolwork/s-index.html
+++ b/Schoolwork/s-index.html
@@ -7,7 +7,7 @@
 <h1>SchoolWork Index</h1>
   
 
-<a href="https://www.airbourne.xyz/Schoolwork/photoshop Tutorials.html">photoshop-tutorials</a>
+<a href="https://www.airbourne.xyz/Schoolwork/photoshop-tutorials.html">photoshop-tutorials</a>
 
 </body>
 
