--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
 <body>
 
 <h1> This is a blank HTML page </h1>
-  
-<audio controls src="Portal2-16-Some_Assembly_Required.mp3"></audio>
+<div>
+    <audio controls src="other-music/Portal2-16-Some_Assembly_Required.mp3"></audio> 
+</div>
+<div>
+    <a href="https://www.airbourne.xyz/Schoolwork/s-index.html">SchoolWork</a>
+</div>
 
-<a href="https://www.airbourne.xyz/Schoolwork/s-index.html">SchoolWork</a>
+
 
 </body>
 
