trying to make the linx work

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </div>
 <div>
     <a href="https://www.airbourne.xyz/Schoolwork/s-index.html">SchoolWork</a>
+    <a href="https://www.airbourne.xyz/codename/Cardinal/en-gb/build/0001aS/index.html">XailerDocsLinkAsTheMainLinkIsNotWorkingRN</a>
+
 </div>
 
 
