--- a/server-shutdown-service/airbourne-club.html
+++ b/server-shutdown-service/airbourne-club.html
@@ -1,4 +1,7 @@
 <h1>AirBourne Club Shutdown</h1>
 <h2>Why</h2>
-<h3>First Words</h3>
-The 
+The AirBourne Club was a server going stale, so we decided to shut it down
+<h2>What will Happen?</h2>
+Eventually, people will migrate to the new AirBourne Universe Server
+<h2>When?</h2>
+20th January 2024
