--- a/gitcopy/index.html
+++ b/gitcopy/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="topnav">
         <div class="log"></div>
-        <a class="active" href="#home" class="bat">
+        <a class="active" href="airbourne.xyz/gitcopy/index.html" class="bat">
             <div class="logowrap">
                 <div class="logo">
                     <img src="./logo.png" />
@@ -21,9 +21,9 @@
             </div>
             <div class="textlogo">Home</div>
         </a>
-        <a href="#news" class="bat">News</a>
-        <a href="#contact" class="bat">Contact</a>
-        <a href="#about" class="bat">About</a>
+        <a href="airbourne.xyz/gitcopy/n/main.html" class="bat">News</a>
+        <a href="airbourne.xyz/gitcopy/c/main.html" class="bat">Contact</a>
+        <a href="airbourne.xyz/gitcopy/a/main.html" class="bat">About</a>
     </div>
     <div class = "buffer">
         <h1></h1>
