--- a/gitcopy/n/main.html
+++ b/gitcopy/n/main.html
@@ -12,7 +12,7 @@
   <body>
     <div class="topnav">
         <div class="log"></div>
-        <a class="active" href="#home" class="bat">
+        <a class="active" href="airbourne.xyz/gitcopy/index.html" class="bat">
             <div class="logowrap">
                 <div class="logo">
                     <img src="./logo.png" />
