possible speed update and definite context update

--- a/gitcopy/n/main.html
+++ b/gitcopy/n/main.html
@@ -15,7 +15,7 @@
         <a class="active" href="https://www.airbourne.xyz/gitcopy/index.html" class="bat">
             <div class="logowrap">
                 <div class="logo">
-                    <img src="./logo.png" />
+                    <img src="../logo.png" />
                 </div>
                 <div class="logogap"></div>
             </div>
@@ -30,8 +30,8 @@
     </div>
     <main>
         <div class="containerA">
-            <img src="./AirBourne_main_page_background_front.png" alt="First-Image" style="width:100%;">
-            <div class="bottom-left">Welcome To AirBourne</div>
+            <img src="../AirBourne_main_page_background_front.png" alt="First-Image" style="width:100%;">
+            <div class="bottom-left">News</div>
         </div>   
     </main>
 	<script src="index.js"></script>
