--- a/gitcopy/OtherTests/p/c/main.html
+++ b/gitcopy/OtherTests/p/c/main.html
@@ -31,7 +31,7 @@
     <main>
         <div class="containerA">
             <img src="../AirBourne_main_page_background_front.png" alt="First-Image" style="width:100%;">
-            <div class="bottom-left">Projects by AirBourne</div>
+            <div class="bottom-left">Cardinal</div>
         </div>   
     </main>
 	<script src="index.js"></script>
