scrolling cards test

--- a/gitcopy/OtherTests/p/mag/main.html
+++ b/gitcopy/OtherTests/p/mag/main.html
@@ -32,7 +32,19 @@
         <div class="containerA">
             <img src="../AirBourne_main_page_background_front.png" alt="First-Image" style="width:100%;">
             <div class="bottom-left">Magpie</div>
-        </div>   
+        </div>
+        <div class="scrolling-wrapper">
+            <div class="card"><h2>Card</h2></div>
+            <div class="card"><h2>Card</h2></div>
+            <div class="card"><h2>Card</h2></div>
+            <div class="card"><h2>Card</h2></div>
+            <div class="card"><h2>Card</h2></div>
+            <div class="card"><h2>Card</h2></div>
+            <div class="card"><h2>Card</h2></div>
+            <div class="card"><h2>Card</h2></div>
+            <div class="card"><h2>Card</h2></div>
+        </div>
+           
     </main>
 	<script src="index.js"></script>
   </body>
