--- a/gitcopy/OtherTests/p/mag/main.html
+++ b/gitcopy/OtherTests/p/mag/main.html
@@ -33,6 +33,7 @@
             <img src="../AirBourne_main_page_background_front.png" alt="First-Image" style="width:100%;">
             <div class="bottom-left">Magpie</div>
         </div>
+        <div class="Spacer"></div>
         <div class="container">
             <div class="faders">
               <div class="left"></div>
