--- a/gitcopy/OtherTests/p/bj/main.html
+++ b/gitcopy/OtherTests/p/bj/main.html
@@ -31,7 +31,7 @@
     <main>
         <div class="containerA">
             <img src="../AirBourne_main_page_background_front.png" alt="First-Image" style="width:100%;">
-            <div class="bottom-left">Magpie</div>
+            <div class="bottom-left">Blue Jay</div>
         </div>
         <div class="Spacer" style="height:500px;"></div>
         <div class="container">
