Revert "anothrt carousel"
This reverts commit 5d577a0147e808135ddbe04c01630c5d6f81c171.

--- a/gitcopy/OtherTests/p/c/main.html
+++ b/gitcopy/OtherTests/p/c/main.html
@@ -84,18 +84,16 @@
             </div>
         </div>
         <div class="scrolling-wrapper">
-            <div class="cardf"><h2>Card</h2></div>
-            <div class="cardf"><h2>Card</h2></div>
-            <div class="cardf"><h2>Card</h2></div>
-            <div class="cardf"><h2>Card</h2></div>
-            <div class="cardf"><h2>Card</h2></div>
-            <div class="cardf"><h2>Card</h2></div>
-            <div class="cardf"><h2>Card</h2></div>
-            <div class="cardf"><h2>Card</h2></div>
-            <div class="cardf"><h2>Card</h2></div>
+            <div class="card"><h2>Card</h2></div>
+            <div class="card"><h2>Card</h2></div>
+            <div class="card"><h2>Card</h2></div>
+            <div class="card"><h2>Card</h2></div>
+            <div class="card"><h2>Card</h2></div>
+            <div class="card"><h2>Card</h2></div>
+            <div class="card"><h2>Card</h2></div>
+            <div class="card"><h2>Card</h2></div>
+            <div class="card"><h2>Card</h2></div>
         </div>
-        <p></p>
-        <div id="app-wrap"></div>
 
     </main>
 	<script src="index.js"></script>
