--- a/gitcopy/OtherTests/p/mag/carouseltest.html
+++ b/gitcopy/OtherTests/p/mag/carouseltest.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="jquery-3.7.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/Draggable.min.js"></script>
     <title>My Website</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
@@ -14,10 +12,10 @@
   <body>
     <div class="topnav">
         <div class="log"></div>
-        <a class="active" href="https://www.airbourne.xyz/gitcopy/index.html" class="bat">
+        <a class="active" href="https://www.airbourne.xyz/gitcopy/OtherTests/index.html" class="bat">
             <div class="logowrap">
                 <div class="logo">
-                    <img src="../logo.png" />
+                    <img src="https://www.airbourne.xyz/gitcopy/OtherTests/logo.png" />
                 </div>
                 <div class="logogap"></div>
             </div>
