--- a/index.html
+++ b/index.html
@@ -4,17 +4,10 @@
 
 <body>
 
-<h1> This is a blank HTML page </h1>
-<div>
-    <audio controls src="other-music/Portal2-16-Some_Assembly_Required.mp3"></audio> 
-</div>
-<div>
-    <a href="https://www.airbourne.xyz/Schoolwork/s-index.html">SchoolWork</a>
-    <a href="https://www.airbourne.xyz/codename/Cardinal/en-gb/build/0001aS/index.html">XailerDocsLinkAsTheMainLinkIsNotWorkingRN</a>
-
-</div>
-
-
+<h1> Other pages under construction on this website. Main page being readied.</h1>
+<a href="www.airbourne.xyz/gitcoopy/inddex.html">Initial Trial</a>
+<a href="www.airbourne.xyz/gitcoopy/OtherTests/inddex.html">Intermediate Trial</a>
+<a href="www.airbourne.xyz/gitcoopy/OtherTests/p/mag/carouseltest.html">Final Trial</a>
 
 </body>
 
