--- a/gitcopy/OtherTests/p/mag/carouseltest.html
+++ b/gitcopy/OtherTests/p/mag/carouseltest.html
@@ -21,9 +21,19 @@
             </div>
             <div class="textlogo">Home</div>
         </a>
-        <a href="https://www.airbourne.xyz/gitcopy/OtherTests/p/bj/main.html" class="bat">Blue Jay</a>
-        <a href="https://www.airbourne.xyz/gitcopy/OtherTests/p/c/main.html" class="bat">Cardinal</a>
-        <a href="https://www.airbourne.xyz/gitcopy/OtherTests/p/mag/main.html" class="bat">Magpie</a>
+        <div class="dropdown">
+            <button class="dropbtn">Projects</button>
+            <div class="dropdown-content">
+                <div class="test">
+                  <a href="https://www.airbourne.xyz/gitcopy/OtherTests/p/bj/main.html" class="link">Blue Jay</a>
+                  <a href="https://www.airbourne.xyz/gitcopy/OtherTests/p/c/main.html" class="link">Cardinal</a>
+                  <a href="https://www.airbourne.xyz/gitcopy/OtherTests/p/mag/main.html" class="link">Magpie</a>
+              </div>
+              <div class="imgforlinks">
+                  <img src="https://images.pexels.com/photos/614810/pexels-photo-614810.jpeg?auto=format%2Ccompress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Smiling person" class="menuimgproj" />
+              </div>
+            </div>
+          </div>
     </div>
     <div class = "buffer">
         <h1></h1>
@@ -163,6 +173,6 @@
             </div>
         </div>
     </main>
-	<script src="carouseltest.js"></script>
+	<script src="index.js"></script>
   </body>
 </html>
