--- a/gitcopy/OtherTests/p/mag/carouseltest.html
+++ b/gitcopy/OtherTests/p/mag/carouseltest.html
@@ -23,7 +23,7 @@
         </a>
         <div class="dropdown">
             <button class="dropbtn">Projects</button>
-            <div class="dropdown-content">
+            <div class="dropdown-content">                                                                  ```````1
                 <div class="test">
                   <a href="https://www.airbourne.xyz/gitcopy/OtherTests/p/bj/main.html" class="link">Blue Jay</a>
                   <a href="https://www.airbourne.xyz/gitcopy/OtherTests/p/c/main.html" class="link">Cardinal</a>
@@ -169,6 +169,21 @@
                     </div>
                     <p class="name">John Doe</p>
                     <p class="quote">"Man, I think this app freaking rocks and stuff. Dude."</p>
+                </div>
+            </div>
+        </div>
+        <div class="projectdesc">
+            <div class="projimg">
+                <img src="./IMG_2409.PNG">
+            </div>
+            <div class="projdesc">
+                <div class="projtitle">
+                    <h1>Project Magpie</h1>
+                </div>
+                <div class="projtext">
+                    <p>
+                        some text here...
+                    </p>
                 </div>
             </div>
         </div>
