--- a/gitcopy/OtherTests/p/mag/carouseltest.html
+++ b/gitcopy/OtherTests/p/mag/carouseltest.html
@@ -27,13 +27,14 @@
             <button class="dropbtn">Projects</button>
             <div class="dropdown-content">
                 <div class="test">
-                    <a href="https://www.airbourne.xyz/gitcopy/OtherTests/p/bj/main.html" class="link">Blue Jay</a>
-                    <a href="https://www.airbourne.xyz/gitcopy/OtherTests/p/c/main.html" class="link">Cardinal</a>
-                    <a href="https://www.airbourne.xyz/gitcopy/OtherTests/p/mag/main.html" class="link">Magpie</a>
+                    <a href="https://www.airbourne.xyz/gitcopy/OtherTests/p/bj/main.html" class="link-bj">Blue Jay</a>
+                    <a href="https://www.airbourne.xyz/gitcopy/OtherTests/p/c/main.html" class="link-c">Cardinal</a>
+                    <a href="https://www.airbourne.xyz/gitcopy/OtherTests/p/mag/main.html" class="link-mag">Magpie</a>
                 </div>
                 <div class="imgforlinks">
-                    <img src="https://images.pexels.com/photos/614810/pexels-photo-614810.jpeg?auto=format%2Ccompress&cs=tinysrgb&dpr=2&h=650&w=940"
-                        alt="Smiling person" class="menuimgproj" />
+                    <div class="menuimgproj"></div>
+                    <!---- <img src="https://images.pexels.com/photos/614810/pexels-photo-614810.jpeg?auto=format%2Ccompress&cs=tinysrgb&dpr=2&h=650&w=940"
+                        alt="Smiling person" class="menuimgproj" /> --> 
                 </div>
             </div>
         </div>
@@ -279,6 +280,7 @@
                 </div>
             </div>
         </div>
+        <input type="image" src="http://davidrhysthomas.co.uk/img/dexter.png" data-alt-image="http://davidrhysthomas.co.uk/img/mandark.png">
     </main>
     <script src="index.js"></script>
 </body>
