basicly it reacts to my face now ugly

--- a/gitcopy/OtherTests/p/mag/carouseltest.html
+++ b/gitcopy/OtherTests/p/mag/carouseltest.html
@@ -27,14 +27,12 @@
             <button class="dropbtn">Projects</button>
             <div class="dropdown-content">
                 <div class="test">
-                    <a href="https://www.airbourne.xyz/gitcopy/OtherTests/p/bj/main.html" class="link-bj">Blue Jay</a>
-                    <a href="https://www.airbourne.xyz/gitcopy/OtherTests/p/c/main.html" class="link-c">Cardinal</a>
-                    <a href="https://www.airbourne.xyz/gitcopy/OtherTests/p/mag/main.html" class="link-mag">Magpie</a>
+                    <a href="https://www.airbourne.xyz/gitcopy/OtherTests/p/bj/main.html" class="link-bj" id="link-bj">Blue Jay</a>
+                    <a href="https://www.airbourne.xyz/gitcopy/OtherTests/p/c/main.html" class="link-c" id="link-c">Cardinal</a>
+                    <a href="https://www.airbourne.xyz/gitcopy/OtherTests/p/mag/main.html" class="link-mag" id="link-mag">Magpie</a>
                 </div>
                 <div class="imgforlinks">
-                    <div class="menuimgproj"></div>
-                    <!---- <img src="https://images.pexels.com/photos/614810/pexels-photo-614810.jpeg?auto=format%2Ccompress&cs=tinysrgb&dpr=2&h=650&w=940"
-                        alt="Smiling person" class="menuimgproj" /> --> 
+                    <img class="image" src="https://www.airbourne.xyz/gitcopy/OtherTests/menuassets/logo.png" id="image">
                 </div>
             </div>
         </div>
@@ -281,6 +279,7 @@
             </div>
         </div>
     <script src="index.js"></script>
+    <script src="hovertest.js"></script>
 </body>
 
 </html>
