--- a/gitcopy/OtherTests/p/mag/carouseltest copy.html
+++ b/gitcopy/OtherTests/p/mag/carouseltest copy.html
@@ -12,40 +12,10 @@
 </head>
 
 <body>
-    <div class="topnav">
-        <div class="log"></div>
-        <a class="active" href="https://www.airbourne.xyz/gitcopy/OtherTests/index.html" class="bat">
-            <div class="logowrap">
-                <div class="logo">
-                    <img src="https://www.airbourne.xyz/gitcopy/OtherTests/logo.png" />
-                </div>
-                <div class="logogap"></div>
-            </div>
-            <div class="textlogo">Home</div>
-        </a>
-        <div class="dropdown">
-            <button class="dropbtn">Projects</button>
-            <div class="dropdown-content">
-                <div class="test">
-                    <a href="https://www.airbourne.xyz/gitcopy/OtherTests/p/bj/main.html" class="link-bj">Blue Jay</a>
-                    <a href="https://www.airbourne.xyz/gitcopy/OtherTests/p/c/main.html" class="link-c">Cardinal</a>
-                    <a href="https://www.airbourne.xyz/gitcopy/OtherTests/p/mag/main.html" class="link-mag">Magpie</a>
-                </div>
-                <div class="imgforlinks">
-                    <div class="menuimgproj"></div>
-                    <!---- <img src="https://images.pexels.com/photos/614810/pexels-photo-614810.jpeg?auto=format%2Ccompress&cs=tinysrgb&dpr=2&h=650&w=940"
-                        alt="Smiling person" class="menuimgproj" /> --> 
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="buffer">
-        <h1></h1>
-    </div>
     <main>
-        <a href="https://www.airbourne.xyz/gitcopy/OtherTests/p/bj/main.html" class="link-bj" id="link-bj">Blue Jay</a>
-        <a href="https://www.airbourne.xyz/gitcopy/OtherTests/p/c/main.html" class="link-c" id="link-c">Cardinal</a>
-        <a href="https://www.airbourne.xyz/gitcopy/OtherTests/p/mag/main.html" class="link-mag" id="link-mag">Magpie</a>
+        <a href="https://www.airbourne.xyz/gitcopy/OtherTests/p/bj/main.html" class="link-bj" id="link-bj" style="height:100px; color:white;">Blue Jay</a>
+        <a href="https://www.airbourne.xyz/gitcopy/OtherTests/p/c/main.html" class="link-c" id="link-c" id="link-bj" style="height:100px; color:white;">Cardinal</a>
+        <a href="https://www.airbourne.xyz/gitcopy/OtherTests/p/mag/main.html" class="link-mag" id="link-mag" id="link-bj" style="height:100px; color:white;">Magpie</a>
         <img class="image" src="https://www.airbourne.xyz/gitcopy/OtherTests/menuassets/logo.png" id="image">
     </main>
 </body>
