--- a/gitcopy/OtherTests/p/mag/resizetest2.html
+++ b/gitcopy/OtherTests/p/mag/resizetest2.html
@@ -284,7 +284,7 @@
         </div>
     <script src="index.js"></script>
     <script src="hovertest.js"></script>
-    <script src="resize.js"></script>
+    <script src="resizemobile.js"></script>
 </body>
 
 </html>
