added proper redirect

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html> 
 <head> 
-    <script src="https:\\www.airbourne.xyz\redirectScript.js"></script>
+    <script src="https:\\www.airbourne.xyz\assests\js\redirectScript.js"></script>
     <link rel="prefetch" href="https:\\www.airbourne.xyz\d\home.html">
     <link rel="prefetch" href="https:\\www.airbourne.xyz\m\home.html">
     <!-- Preload Logos -->
