--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
     <link rel="preload" as="image" href="https:\\www.airbourne.xyz\assets\-disc.jpg">
     <link rel="preload" as="image" href="https:\\www.airbourne.xyz\assets\-flat.jpg">
     <link rel="preload" as="image" href="https:\\www.airbourne.xyz\assets\idx.jpg">
+    <!-- Default Background -->
+    <link rel="preload" href="https:\\www.airbourne.xyz\assests\background_default.jpg">
     <!-- end preload  -->
 
 </head>
