try resizing again

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html> 
 <head> 
-    <script src="https:\\www.airbourne.xyz\assests\js\redirectScript.js"></script>
     <link rel="prefetch" href="https:\\www.airbourne.xyz\d\home.html">
     <link rel="prefetch" href="https:\\www.airbourne.xyz\m\home.html">
     <!-- Preload Logos -->
@@ -47,5 +46,5 @@
     <!-- end preload  -->
 
 </head>
-<body> <p> did it not redirect ? </p></body>
+<body> <p> did it not redirect ? </p><script src="https:\\www.airbourne.xyz\assests\js\redirectScript.js"></script></body>
 </html>
