--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     <!-- end preload  -->
 
 </head>
-<body> <p> did it not redirect ? </p><script src="https:\\www.airbourne.xyz\assests\js\redirectScript.js" defer></script> 
-<!-- <script> 
+<body onload="checkWidth()"> <p> did it not redirect ? </p><script src="https:\\www.airbourne.xyz\assests\js\redirectScript.js"></script> 
+<script> 
 function checkWidth() {
     if($(window).width() > 950){
         window.location = "https://www.airbourne.xyz/d/index.html"
@@ -54,5 +54,5 @@ function checkWidth() {
     }
 
 }
-    </script> --> </body>
+    </script> </body>
 </html>
