--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 <script> 
 function checkWidth() {
     if($(window).width() > 950){
-        window.location = "https://www.airbourne.xyz/d/index.html"
+        window.location = "https://www.airbourne.xyz/d/index.html";
     } else if($(window).width() < 950){
-        window.location = "https://www.airbourne.xyz/m/index.html"
+        window.location = "https://www.airbourne.xyz/m/index.html";
     }
 
 }
