--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 </head>
 <body onload="checkWidth();"> <p> did it not redirect ? </p><script src="https:\\www.airbourne.xyz\assests\js\redirectScript.js"></script> 
 <script> 
+window.onload = checkWidth();
 function checkWidth() {
     if($(window).width() > 950){
         window.location = "https://www.airbourne.xyz/d/index.html";
