remove bulk preload

--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html> 
 <head> 
-    <!-- Preload Logos -->
+    <!-- Preload Logos --
     <link rel="preload" as="image" href="https:\\www.airbourne.xyz\assets\airbourne-small.jpg">
     <link rel="preload" as="image" href="https:\\www.airbourne.xyz\assets\airbourne-medium.jpg">
     <link rel="preload" as="image" href="https:\\www.airbourne.xyz\assets\airbourne-large.jpg">
-    <!-- Preload Project Logos-->
-    <!-- Dis//Connect -->
+    <-- Preload Project Logos--
+    <-- Dis//Connect --
     <link rel="preload" as="image" href="https:\\www.airbourne.xyz\assets\magpie-disc.jpg">
     <link rel="preload" as="image" href="https:\\www.airbourne.xyz\assets\magpie-flat.jpg">
     <link rel="preload" as="image" href="https:\\www.airbourne.xyz\assets\disconnect.jpg">
-    <!-- Xailier -->
+    <-- Xailier --
     <link rel="preload" as="image" href="https:\\www.airbourne.xyz\assets\cardinal-disc.jpg">
     <link rel="preload" as="image" href="https:\\www.airbourne.xyz\assets\cardinal-flat.jpg">
     <link rel="preload" as="image" href="https:\\www.airbourne.xyz\assets\xalier.jpg">
-    <!-- OnBoard AI-->
+    <-- OnBoard AI--
     <link rel="preload" as="image" href="https:\\www.airbourne.xyz\assets\bluejay-disc.jpg">
     <link rel="preload" as="image" href="https:\\www.airbourne.xyz\assets\bluejay-flat.jpg">
     <link rel="preload" as="image" href="https:\\www.airbourne.xyz\assets\zona.jpg">
-    <!-- Sandbox -->
-    <link rel="preload" as="image" href="https:\\www.airbourne.xyz\assets\harpy-disc.jpg">
+    <-- Sandbox 
+    <link rel="poad" as="image" href="https:\\www.airbourne.xyz\assets\harpy-disc.jpg">
     <link rel="preload" as="image" href="https:\\www.airbourne.xyz\assets\harpy-flat.jpg">
     <link rel="preload" as="image" href="https:\\www.airbourne.xyz\assets\sandbox.jpg">
-    <!-- EmberOS -->
+    <-- EmberOS 
     <link rel="preload" as="image" href="https:\\www.airbourne.xyz\assets\bellbird-disc.jpg">
     <link rel="preload" as="image" href="https:\\www.airbourne.xyz\assets\bellbird-flat.jpg">
     <link rel="preload" as="image" href="https:\\www.airbourne.xyz\assets\emberos.jpg">
-    <!-- Ember Coding Lang -->
+    <-- Ember Coding Lang 
     <link rel="preload" as="image" href="https:\\www.airbourne.xyz\assets\raven-disc.jpg">
     <link rel="preload" as="image" href="https:\\www.airbourne.xyz\assets\raven-flat.jpg">
     <link rel="preload" as="image" href="https:\\www.airbourne.xyz\assets\ember.jpg">
@@ -35,13 +35,13 @@
     <link rel="preload" as="image" href="https:\\www.airbourne.xyz\assets\embersharp.jpg">
     <link rel="preload" as="image" href="https:\\www.airbourne.xyz\assets\emberstar.jpg">
     <link rel="preload" as="image" href="https:\\www.airbourne.xyz\assets\emberstarstar.jpg">
-    <!-- IDX -->
+    <-- IDX 
     <link rel="preload" as="image" href="https:\\www.airbourne.xyz\assets\-disc.jpg">
     <link rel="preload" as="image" href="https:\\www.airbourne.xyz\assets\-flat.jpg">
     <link rel="preload" as="image" href="https:\\www.airbourne.xyz\assets\idx.jpg">
-    <!-- Default Background -->
+    <!-- Default Background --
     <link rel="preload" href="https:\\www.airbourne.xyz\assests\background_default.jpg">
-    <!-- end preload  -->
+   <-- end preload  -->
 
 </head>
 <body onload="checkWidth();"> <p> did it not redirect ? </p><script src="https:\\www.airbourne.xyz\assests\js\redirectScript.js"></script> 
@@ -56,12 +56,12 @@
 //
 //}
 
-window.addEventListener("load", function(){
-    if($(window).width() > 950){
-        window.location = "https://www.airbourne.xyz/d/index.html";
-    } else if($(window).width() < 950){
-        window.location = "https://www.airbourne.xyz/m/index.html";
-    }
-    });
+  window.addEventListener("load", function(){
+      if($(window).width() > 950){
+          window.location = "https://www.airbourne.xyz/d/index.html";
+      } else if($(window).width() < 950){
+          window.location = "https://www.airbourne.xyz/m/index.html";
+      }
+      });
     </script> </body>
 </html>
