--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
    <-- end preload  -->
 
 </head>
-<body onload="checkWidth();"> <p> did it not redirect ? </p><script src="https:\\www.airbourne.xyz\assests\js\redirectScript.js"></script> 
+<body onload="checkWidth();"> <p> did it not redirect ? </p> <!--<script src="https:\\www.airbourne.xyz\assests\js\redirectScript.js"></script> --> 
 <script> 
 // window.onload = checkWidth();
 //function checkWidth() {
