--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
 <body onload="checkWidth();"> <p> did it not redirect ? </p> <!--<script src="https:\\www.airbourne.xyz\assests\js\redirectScript.js"></script> --> 
 <script> 
 // window.onload = checkWidth();
-//function checkWidth() {
-//    if($(window).width() > 950){
-//        window.location = "https://www.airbourne.xyz/d/index.html";
-//    } else if($(window).width() < 950){
-//        window.location = "https://www.airbourne.xyz/m/index.html";
-//    }
-//
-//}
+function checkWidth() {
+    if($(window).width() > 950){
+        window.location = "https://www.airbourne.xyz/d/index.html";
+    } else if($(window).width() < 950){
+        window.location = "https://www.airbourne.xyz/m/index.html";
+    }
+
+}
 
   window.addEventListener("load", function(){
       if($(window).width() > 950){
