--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 <script> 
 // window.onload = checkWidth();
 function checkWidth() {
-    if(window.width() > 950){
+    if((window).width() > 950){
         window.location = "https://www.airbourne.xyz/d/index.html";
-    } else if($(window).width() < 950){
+    } else if((window).width() < 950){
         window.location = "https://www.airbourne.xyz/m/index.html";
     }
 
@@ -59,7 +59,7 @@ function checkWidth() {
   window.addEventListener("load", function(){
       if(window.width() > 950){
           window.location = "https://www.airbourne.xyz/d/index.html";
-      } else if($(window).width() < 950){
+      } else if((window).width() < 950){
           window.location = "https://www.airbourne.xyz/m/index.html";
       }
       });
