--- a/d/index.html
+++ b/d/index.html
@@ -42,7 +42,7 @@
     </div>
     <main>
         <div class="containerA">
-            <img src="../AirBourne_main_page_background_front.png" alt="First-Image" style="width:100%;">
+            <img src="../assets/default_background.png" alt="First-Image" style="width:100%;">
             <div class="bottom-left">Magpie</div>
         </div>
         <div class="Spacer" style="height:500px;"></div>
@@ -193,7 +193,7 @@
         <div class="buffer" style="height:100px"></div>
         <div class="projectdesc">
             <div class="projimg">
-                <img src="./IMG_2409.PNG">
+                <img src="../assets/magpie.PNG">
             </div>
             <div class="projdesc">
                 <div class="projtitle">
@@ -204,12 +204,12 @@
                 </div>
             </div>
             <div class="projdownarrow">
-                <img src="./darw.png">
+                <img src="../assets/downarrow.png">
             </div>
         </div>
         <div class="projectdesc">
             <div class="projimg">
-                <img src="./disconnect.png">
+                <img src="../assets/disconnect.png">
             </div>
             <div class="projdesc">
                 <div class="projtitle">
